--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run Postman Test Collection with HTML Report
         run: |
-          newman run "PostmanSample/SampleAPITests.postman_collection.json" --reporters cli,html --reporter-html-export report.html
+          newman run "SampleAPITests.postman_collection.json" --reporters cli,html --reporter-html-export report.html
 
       - name: Upload HTML Report
         uses: actions/upload-artifact@v4
